--- a/molecule/aio/converge.yml
+++ b/molecule/aio/converge.yml
@@ -30,6 +30,9 @@
 - name: Deploy OpenStack
   ansible.builtin.import_playbook: vexxhost.atmosphere.openstack
 
+- name: Deploy Ironic Emmulation Environment
+  ansible.builtin.import_playbook: vexxhost.atmosphere.ironic_emmulator
+
 - name: Configure networking
   hosts: all
   tasks:
