--- a/roles/ironic-emmulator-nodes/tasks/main.yml
+++ b/roles/ironic-emmulator-nodes/tasks/main.yml
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 - name: prepare ovmf images
+  changed_when: false
   run_once: true
   ansible.builtin.shell: |
     # make sure ovmf files exists in image path
@@ -14,6 +15,7 @@
     chmod 0711 /var/lib/libvirt/images
 
 - name: Wait until baremetal conductor ready
+  changed_when: false
   kubernetes.core.k8s_info:
     kind: Pod
     name: ironic-conductor-0
@@ -26,6 +28,7 @@
       status: true
 
 - name: Get Libvirt pods info
+  changed_when: false
   kubernetes.core.k8s_info:
     namespace: openstack
     kind: Pod
@@ -50,6 +53,7 @@
     executable: /bin/bash
 
 - name: Define "ironic-pxe" bridge
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -58,6 +62,7 @@
     command: virsh net-define /var/lib/libvirt/ironic-pxe.xml
 
 - name: Set auto start "ironic-pxe" bridge
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -66,6 +71,7 @@
     command: virsh net-autostart ironic-pxe
 
 - name: Start "ironic-pxe" bridge
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -74,6 +80,7 @@
     command: virsh net-start ironic-pxe
 
 - name: Create storage for virtual baremetal nodes - define pool
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -83,6 +90,7 @@
   when: libvirt_pod.resources | length > 0
 
 - name: Create storage for virtual baremetal nodes - pool autostart
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -91,6 +99,7 @@
     command: virsh pool-autostart default
 
 - name: Create storage for virtual baremetal nodes - pool start
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -100,6 +109,7 @@
   when: libvirt_pod.resources | length > 0
 
 - name: Create storage for virtual baremetal nodes - create node-0 volume
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -109,6 +119,7 @@
   when: libvirt_pod.resources | length > 0
 
 - name: Create storage for virtual baremetal nodes - create node-1 volume
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -118,6 +129,7 @@
   when: libvirt_pod.resources | length > 0
 
 - name: Create storage for virtual baremetal nodes - set volume path node-0
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -127,6 +139,7 @@
   when: libvirt_pod.resources | length > 0
 
 - name: Create storage for virtual baremetal nodes - set volume path node-1
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -360,6 +373,7 @@
     executable: /bin/bash
 
 - name: Create virtual baremetal node - define node-0
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -369,6 +383,7 @@
   when: libvirt_pod.resources | length > 0
 
 - name: Create virtual baremetal node - start node-0
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -378,6 +393,7 @@
   when: libvirt_pod.resources | length > 0
 
 - name: Create virtual baremetal node - define node-1
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
@@ -387,6 +403,7 @@
   when: libvirt_pod.resources | length > 0
 
 - name: Create virtual baremetal node - start node-1
+  changed_when: false
   ignore_errors: true # noqa: ignore-errors
   kubernetes.core.k8s_exec:
     namespace: openstack
