--- a/playbooks/ironic_emmulator.yml
+++ b/playbooks/ironic_emmulator.yml
@@ -16,7 +16,7 @@
         - ironic-emmulator-network
 
     - role: ironic
-      when: ((atmosphere_baremetal_emulator_enabled | default(false)) or (atmosphere_baremetal_enabled | default(false)))
+      when: atmosphere_baremetal_emulator_enabled | default(false)
       tags:
         - ironic
 
