--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -205,7 +205,7 @@ _atmosphere_images:
   percona_xtradb_cluster_backup: "{{ atmosphere_image_prefix }}docker.io/percona/percona-xtrabackup:8.0.35-33.1"
   placement_db_sync: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/placement:2025.2@sha256:1a03e9c816ba2d2480d161387879daac1d2268e88142d075c53cd8cfd260d053"
   placement: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/placement:2025.2@sha256:1a03e9c816ba2d2480d161387879daac1d2268e88142d075c53cd8cfd260d053"
-  pod_tls_sidecar: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/pod-tls-sidecar:latest"
+  pod_tls_sidecar: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/pod-tls-sidecar:v1.0.0"
   prometheus_config_reloader: "{{ atmosphere_image_prefix }}quay.io/prometheus-operator/prometheus-config-reloader:v0.73.0"
   prometheus_ipmi_exporter: "{{ atmosphere_image_prefix }}us-docker.pkg.dev/vexxhost-infra/openstack/ipmi-exporter:1.4.0"
   prometheus_memcached_exporter: "{{ atmosphere_image_prefix }}quay.io/prometheus/memcached-exporter:v0.14.3"
