chore: move pod-tls-sidecar image to ghcr.io/vexxhost
Move the pod-tls-sidecar image from registry.atmosphere.dev to
ghcr.io/vexxhost/pod-tls-sidecar.

Signed-off-by: donnyao <ao.donny@gmail.com>

--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -200,7 +200,7 @@ _atmosphere_images:
   percona_version_service: "{{ atmosphere_image_prefix }}docker.io/perconalab/version-service:main-3325140"
   placement_db_sync: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/placement:zed@sha256:d21168a679344dcccf5dad865238f25b3b7a5f08baead56039212f86636ff6ad"
   placement: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/placement:zed@sha256:d21168a679344dcccf5dad865238f25b3b7a5f08baead56039212f86636ff6ad"
-  pod_tls_sidecar: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/pod-tls-sidecar:latest"
+  pod_tls_sidecar: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/pod-tls-sidecar:latest"
   prometheus_config_reloader: "{{ atmosphere_image_prefix }}quay.io/prometheus-operator/prometheus-config-reloader:v0.73.0"
   prometheus_ipmi_exporter: "{{ atmosphere_image_prefix }}us-docker.pkg.dev/vexxhost-infra/openstack/ipmi-exporter:1.4.0"
   prometheus_memcached_exporter: "{{ atmosphere_image_prefix }}quay.io/prometheus/memcached-exporter:v0.10.0"
