chore: move pod-tls-sidecar image to ghcr.io/vexxhost
Move the pod-tls-sidecar image from registry.atmosphere.dev to
ghcr.io/vexxhost/pod-tls-sidecar.

Signed-off-by: donnyao <ao.donny@gmail.com>

--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -201,7 +201,7 @@ _atmosphere_images:
   percona_xtradb_cluster_backup: "{{ atmosphere_image_prefix }}docker.io/percona/percona-xtradb-cluster-operator:1.17.0-pxc8.0-backup-pxb8.0.35"
   placement_db_sync: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/placement:2023.2@sha256:7199e78e4aaf70a51d4c5d1a47af703728bbac6fbac231305c2f4646f0a86c65"
   placement: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/placement:2023.2@sha256:7199e78e4aaf70a51d4c5d1a47af703728bbac6fbac231305c2f4646f0a86c65"
-  pod_tls_sidecar: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/pod-tls-sidecar:latest"
+  pod_tls_sidecar: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/pod-tls-sidecar:latest"
   prometheus_config_reloader: "{{ atmosphere_image_prefix }}quay.io/prometheus-operator/prometheus-config-reloader:v0.73.0"
   prometheus_ipmi_exporter: "{{ atmosphere_image_prefix }}us-docker.pkg.dev/vexxhost-infra/openstack/ipmi-exporter:1.4.0"
   prometheus_memcached_exporter: "{{ atmosphere_image_prefix }}quay.io/prometheus/memcached-exporter:v0.14.3"
