--- a/releasenotes/notes/move-pod-tls-sidecar-to-ghcr-a1b2c3d4e5f6g7h8.yaml
+++ b/releasenotes/notes/move-pod-tls-sidecar-to-ghcr-a1b2c3d4e5f6g7h8.yaml
@@ -1,5 +1,6 @@
 ---
 upgrade:
   - |
-    The ``pod-tls-sidecar`` image moved from ``registry.atmosphere.dev`` to the
-    GitHub Container Registry. This change centralizes the image location.
+    The ``pod-tls-sidecar`` image moved from ``registry.atmosphere.dev`` to
+    ``ghcr.io/vexxhost/pod-tls-sidecar``. This change centralizes the
+    image location and uses a stable version tag.
