--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -200,7 +200,7 @@ _atmosphere_images:
   percona_xtradb_cluster_backup: "{{ atmosphere_image_prefix }}docker.io/percona/percona-xtradb-cluster-operator:1.17.0-pxc8.0-backup-pxb8.0.35"
   placement_db_sync: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/placement:2023.1@sha256:80ebe941015fa17efebe27d661c0ce20291b7713c99bdbb62268e7887238bd9b"
   placement: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/placement:2023.1@sha256:80ebe941015fa17efebe27d661c0ce20291b7713c99bdbb62268e7887238bd9b"
-  pod_tls_sidecar: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/pod-tls-sidecar:latest"
+  pod_tls_sidecar: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/pod-tls-sidecar:v1.0.0"
   prometheus_config_reloader: "{{ atmosphere_image_prefix }}quay.io/prometheus-operator/prometheus-config-reloader:v0.73.0"
   prometheus_ipmi_exporter: "{{ atmosphere_image_prefix }}us-docker.pkg.dev/vexxhost-infra/openstack/ipmi-exporter:1.4.0"
   prometheus_memcached_exporter: "{{ atmosphere_image_prefix }}quay.io/prometheus/memcached-exporter:v0.14.3"
