chore: use v1.0.0 tag for sidecar images and improve release notes
Signed-off-by: donnyao <ao.donny@gmail.com>

--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -205,7 +205,7 @@ _atmosphere_images:
   percona_xtradb_cluster_backup: "{{ atmosphere_image_prefix }}docker.io/percona/percona-xtrabackup:8.0.35-33.1"
   placement_db_sync: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/placement:main@sha256:ae9d401c35c837d9c7dc3b0dbbe1b183545949eefb9c3b594ba08084c2cf85ca"
   placement: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/placement:main@sha256:ae9d401c35c837d9c7dc3b0dbbe1b183545949eefb9c3b594ba08084c2cf85ca"
-  pod_tls_sidecar: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/pod-tls-sidecar:latest"
+  pod_tls_sidecar: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/pod-tls-sidecar:v1.0.0"
   prometheus_config_reloader: "{{ atmosphere_image_prefix }}quay.io/prometheus-operator/prometheus-config-reloader:v0.73.0"
   prometheus_ipmi_exporter: "{{ atmosphere_image_prefix }}us-docker.pkg.dev/vexxhost-infra/openstack/ipmi-exporter:1.4.0"
   prometheus_memcached_exporter: "{{ atmosphere_image_prefix }}quay.io/prometheus/memcached-exporter:v0.14.3"
